<resources>
    <string name="app_name">T-shiksha</string>
    <string name="already_member">Already Member ?</string>
    <string name="login">Login</string>
    <string name="Signup">Sign Up</string>
    <string name="forget">Forget Your Password / MPIN?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LogicalSofttech</string>
    <string name="nav_header_subtitle"> Online study courses </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">PIN</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_myCource">My Cource</string>
    <string name="home_second">Home Second</string>
    <string name="study">Study</string>
    <string name="qana"><![CDATA[Q & A]]></string>
    <string name="doubts">Doubts</string>
    <string name="exams">Exams</string>
    <string name="classs">Class</string>

    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_about2">About</string>
    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="video_msg">Engagiing Video lessons from subjecr matter expert around the world making it easier to understand complex concepts</string>
    <string name="on_demand_msg">Engagiing Video lessons from subjecr matter expert around the world making it easier to understand complex concepts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="q_and_a"><![CDATA[Q & A]]></string>
    <string name="your_subject"> Course</string>
    <string name="post_your_question">Post Your Question</string>
    <string name="board">Board</string>
    <string name="type_ques">Type Your Question</string>
    <string name="attachment">Attachment</string>
    <string name="modules">Modules</string>
    <string name="purchase_history">My Orders</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="MyExam">My Exam</string>
    <string name="menu_about">About</string>
    <string name="Terms"><![CDATA[Terms & Condition]]></string>
    <string name="title_profile">Profile</string>
    <string name="updateprofile">Update Profile</string>
    <string name="Course_Package_List">My MemberShip</string>
    <string name="logout">Logout</string>
    <string name="Okay">Okay</string>
    <string name="no_video">No Video Available</string>
    <string name="no_rcord_found">No Record Found</string>
    <string name="helpline">HelpLine</string>
    <string name="dummy_text"><![CDATA["import static com.example.jarvis_main.chatapptest.R.layout.activity_main;  public class MainActivity extends AppCompatActivity {  private static int SignInRequestCode = 1; private FirebaseListAdapter<ChatMessage> adapter; RelativeLayout activity_main; FloatingActionButton fab;  @Override protected void onCreate(Bundle savedInstanceState) {     super.onCreate(savedInstanceState);     activity_main = (RelativeLayout)findViewById(R.id.activity_main);      setContentView(R.layout.activity_main);     fab = (FloatingActionButton)findViewById(R.id.fab);     fab.setOnClickListener(new View.OnClickListener() {         @Override         public void onClick(View view) {             EditText input = (EditText)findViewById(R.id.input);             FirebaseDatabase.getInstance().getReference().push().setValue(new ChatMessage(input.getText().toString(), FirebaseAuth.getInstance().getCurrentUser().getEmail()));             input.setText(\"\");         }     });      if(FirebaseAuth.getInstance().getCurrentUser() == null)     {         startActivityForResult(AuthUI.getInstance().createSignInIntentBuilder().build(),SignInRequestCode);     }     else     {         Snackbar.make(activity_main, \"Welcome \"+FirebaseAuth.getInstance().getCurrentUser().getEmail(), Snackbar.LENGTH_SHORT).show();         //Load content         displayChatMessage();     } }  @Override public boolean onOptionsItemSelected(MenuItem item) {     if(item.getItemId() == R.id.menu_sign_out){         AuthUI.getInstance().signOut(this).addOnCompleteListener(new OnCompleteListener<Void>(){            @Override                    public void onComplete(@NonNull Task<Void> Task){                     Snackbar.make(activity_main,\"Successfully signed out. Bye!\", Snackbar.LENGTH_SHORT).show();                     finish();             }         });     }     return true; }  @Override public boolean onCreateOptionsMenu(Menu menu) {     getMenuInflater().inflate(R.menu.main_menu,menu);      return true; }  @Override protected void onActivityResult(int requestCode, int resultCode, Intent data) {     super.onActivityResult(requestCode, resultCode, data);     if(requestCode == SignInRequestCode)     {         if(resultCode == RESULT_OK)         {             Snackbar.make(activity_main,\"Successfully signed in. Welcome!\", Snackbar.LENGTH_SHORT).show();             displayChatMessage();         }         else{             Snackbar.make(activity_main,\"We couldn't sign you in.Please try again later\", Snackbar.LENGTH_SHORT).show();             finish();         }     } }  private void displayChatMessage(){     ListView listOfMsg = (ListView)findViewById(R.id.list_of_message);     adapter = new FirebaseListAdapter<ChatMessage>(this, ChatMessage.class,R.layout.list_item,FirebaseDatabase.getInstance().getReference()) {         @Override         protected void populateView(View v, ChatMessage model, int position) {             TextView messageText,messageUser,messageTime;             messageText = (TextView) findViewById(R.id.message_text);             messageUser = (TextView) findViewById(R.id.message_user);             messageTime = (TextView) findViewById(R.id.message_time);              messageText.setText(model.getMessageTexts()); "]]></string>
    <string name="Membershipplan">Membership Plan</string>
    <string name="YourCource">Your Course</string>





</resources>
