<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"/>


        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_history"
            android:title="@string/leaderboard" />

        <item
            android:id="@+id/Course_Package_List"
            android:icon="@drawable/ic_course"
            android:title="@string/Course_Package_List"/>

        <item
            android:id="@+id/subs_plan"
            android:icon="@drawable/ic_course"
            android:title="@string/Membershipplan" />


        <item
            android:visible="false"
            android:id="@+id/nav_myExams"
            android:icon="@drawable/ic_history"
            android:title="@string/MyExam" />



        <item
            android:id="@+id/terms_condition"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Terms" />
    </group>

    <item
        android:title="Communicate"
        android:iconTint="@color/white"
        >
        <menu>
            <item
                android:id="@+id/nav_share"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_about2" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />



        </menu>
    </item>

</menu>
