<?xml version="1.0" encoding="utf-8"?>
<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="LoginViewModel"
            type="com.olavoeducation.view_section.viewmodel.LoginViewModel" />
    </data>-->


<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view_section.Login.LoginSection.RegistrationActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <LinearLayout
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="90dp"
            android:layout_gravity="center"
            android:src="@drawable/newlogo"
            android:layout_height="90dp"/>

    </LinearLayout>





    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:text="Sign In"
           android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_25sdp"
            android:fontFamily="@font/aileron_semibold"
            android:layout_height="wrap_content"/>



        <EditText
            android:windowSoftInputMode="stateAlwaysVisible"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:isScrollContainer="true"
            android:focusable="true"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/gray_corner"
            android:drawableLeft="@drawable/ic_mail"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="Email Id"
            android:imeOptions="actionNext"
            android:padding="@dimen/_10sdp" />


        <EditText
            android:windowSoftInputMode="stateAlwaysVisible"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:isScrollContainer="true"
            android:focusable="true"
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/gray_corner"
            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="Password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp" />




        <!-- sign In Button -->
        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/signupbackground"
            android:text="Sign In"
            android:textColor="#FFF"
            android:onClick="@{(v) -> LoginViewModel.onClick(v)}"
            android:textSize="20sp"
            android:textStyle="bold" />









        <LinearLayout
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/already_member"
                android:layout_width="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/signup"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_3sdp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/Signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>




        </LinearLayout>



        <TextView
            android:layout_gravity="center"
            style="@style/text_16red_bold"
            android:id="@+id/forget_pwd"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>






    </LinearLayout>

</LinearLayout>

